tests/regression/errors/edge_cases/recovery_40.csd
// Error recovery test 40
sus invalid_array []drip = [1, 2, "string", 4]  // Type error
sus index_error drip = invalid_array[100]  // Index error
vibez.spill("Recovery 40: should not reach here")
